[gd_scene load_steps=13 format=2]

[ext_resource path="res://addons/tree-tools/Scripts/treetool.gd" type="Script" id=1]
[ext_resource path="res://addons/tree-tools/Scripts/grapheditor.gd" type="Script" id=2]
[ext_resource path="res://addons/tree-tools/Menus/context_menu.tscn" type="PackedScene" id=3]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/racing-flag.png" type="Texture" id=4]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/dialogue-cloud-symbol.png" type="Texture" id=5]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/dice.png" type="Texture" id=6]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/path-selection.png" type="Texture" id=7]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/icon.png" type="Texture" id=8]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/hierarchical-structure.png" type="Texture" id=9]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/puzzle.png" type="Texture" id=10]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/jump-hand-drawn-arrow.png" type="Texture" id=11]
[ext_resource path="res://addons/tree-tools/Nodes/Icons/two-circling-arrows.png" type="Texture" id=12]

[node name="Tree-tools" type="PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
_sections_unfolded = [ "Theme" ]

[node name="save_dialog" type="FileDialog" parent="." index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 257.0
margin_top = 226.0
margin_right = 899.0
margin_bottom = 676.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Save a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 4
access = 2
filters = PoolStringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )
show_hidden_files = false
current_dir = "/tmp/godot-dialogtreetools"
current_file = ""
current_path = "/tmp/godot-dialogtreetools/"

[node name="load_dialog" type="FileDialog" parent="." index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 1377.0
margin_top = 226.0
margin_right = 2019.0
margin_bottom = 676.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Open a File"
resizable = false
dialog_hide_on_ok = false
mode_overrides_title = true
mode = 0
access = 2
filters = PoolStringArray( "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation", "*.json;JavaScript Object Notation" )
show_hidden_files = false
current_dir = "/tmp/godot-dialogtreetools"
current_file = ""
current_path = "/tmp/godot-dialogtreetools/"

[node name="split_container" type="HSplitContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 7.0
margin_right = 1017.0
margin_bottom = 593.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
split_offset = 0
collapsed = false
dragger_visibility = 0

[node name="editor" type="GraphEdit" parent="split_container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1010.0
margin_bottom = 586.0
rect_min_size = Vector2( 200, 200 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0
right_disconnects = true
scroll_offset = Vector2( 0, 0 )
snap_distance = 20
use_snap = true
zoom = 1.0
script = ExtResource( 2 )

[node name="clear_confirmation_popup" type="ConfirmationDialog" parent="split_container/editor" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 234.0
margin_top = 276.0
margin_right = 621.0
margin_bottom = 334.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
popup_exclusive = false
window_title = "Please Confirm..."
resizable = false
dialog_text = "The content of the TreeNode will be erased. Are you sure?"
dialog_hide_on_ok = true

[node name="MarginContainer" type="MarginContainer" parent="split_container/editor" index="1"]

editor/display_folded = true
anchor_left = 1.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 0.0
margin_left = -206.0
margin_top = 10.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
_sections_unfolded = [ "Margin" ]

[node name="top_right" type="VBoxContainer" parent="split_container/editor/MarginContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 8.0
margin_right = 206.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 2
_sections_unfolded = [ "Anchor", "Margin", "Rect" ]

[node name="buttons" type="HBoxContainer" parent="split_container/editor/MarginContainer/top_right" index="0"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 198.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Anchor", "Margin" ]

[node name="export_button" type="Button" parent="split_container/editor/MarginContainer/top_right/buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 52.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Export"
flat = false
align = 1

[node name="import_button" type="Button" parent="split_container/editor/MarginContainer/top_right/buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 56.0
margin_right = 112.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Import"
flat = false
align = 1

[node name="clear_button" type="Button" parent="split_container/editor/MarginContainer/top_right/buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 116.0
margin_right = 160.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Clear"
flat = false
align = 1

[node name="add_button" type="Button" parent="split_container/editor/MarginContainer/top_right/buttons" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 164.0
margin_right = 184.0
margin_bottom = 20.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = false
enabled_focus_mode = 0
shortcut = null
group = null
text = "+"
flat = false
align = 1

[node name="Label" type="Label" parent="split_container/editor/MarginContainer/top_right" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 24.0
margin_right = 153.0
margin_bottom = 38.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Right-click to add nodes"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="PopupMenu" parent="split_container/editor" index="2" instance=ExtResource( 3 )]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
focus_mode = 2
mouse_default_cursor_shape = 0
items = [ "Start node", ExtResource( 4 ), 0, false, false, 0, 0, null, "", false, "Action/Line node", ExtResource( 5 ), 0, false, false, 1, 0, null, "", false, "Random Line node", ExtResource( 6 ), 0, false, false, 2, 0, null, "", false, "Option node", ExtResource( 7 ), 0, false, false, 3, 0, null, "", false, "Variable set node", ExtResource( 8 ), 0, false, false, 4, 0, null, "", false, "Group node", ExtResource( 9 ), 0, false, false, 5, 0, null, "", false, "Condition node", ExtResource( 10 ), 0, false, false, 6, 0, null, "", false, "Jump node", ExtResource( 11 ), 0, false, false, 7, 0, null, "", false, "Loop node", ExtResource( 12 ), 0, false, false, 8, 0, null, "", false ]
hide_on_state_item_selection = false

[node name="GridContainer" type="GridContainer" parent="split_container" index="1"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 814.0
margin_right = 1010.0
margin_bottom = 586.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 2
_sections_unfolded = [ "Anchor", "Size Flags" ]

[node name="Label" type="Label" parent="split_container/GridContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 5.0
margin_right = 27.0
margin_bottom = 19.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Size Flags" ]

[node name="LineEdit" type="LineEdit" parent="split_container/GridContainer" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_right = 196.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 3
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0
_sections_unfolded = [ "Size Flags" ]

[node name="Label3" type="Label" parent="split_container/GridContainer" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 33.0
margin_right = 27.0
margin_bottom = 47.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Test"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="LineEdit2" type="LineEdit" parent="split_container/GridContainer" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 31.0
margin_top = 28.0
margin_right = 196.0
margin_bottom = 52.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 1
size_flags_horizontal = 1
size_flags_vertical = 1
focus_mode = 2
context_menu_enabled = true
placeholder_alpha = 0.6
caret_blink = false
caret_blink_speed = 0.65
caret_position = 0

[connection signal="file_selected" from="save_dialog" to="." method="_save_data"]

[connection signal="file_selected" from="load_dialog" to="." method="_load_data"]

[connection signal="connection_request" from="split_container/editor" to="split_container/editor" method="_on_editor_connection_request"]

[connection signal="disconnection_request" from="split_container/editor" to="split_container/editor" method="_on_editor_disconnection_request"]

[connection signal="gui_input" from="split_container/editor" to="split_container/editor" method="_on_editor_gui_input"]

[connection signal="confirmed" from="split_container/editor/clear_confirmation_popup" to="split_container/editor" method="clear"]

[connection signal="pressed" from="split_container/editor/MarginContainer/top_right/buttons/export_button" to="." method="_on_export_button_pressed"]

[connection signal="pressed" from="split_container/editor/MarginContainer/top_right/buttons/import_button" to="." method="_on_import_button_pressed"]

[connection signal="pressed" from="split_container/editor/MarginContainer/top_right/buttons/clear_button" to="split_container/editor" method="raise_clear_confirm"]

[connection signal="pressed" from="split_container/editor/MarginContainer/top_right/buttons/add_button" to="split_container/editor" method="_on_add_button_pressed"]

[connection signal="close_request" from="split_container/editor/node1" to="split_container/editor/node1" method="_on_close_request"]


